[metadata]
name = autofish-amund211
version = 0.1.0
author = Amund Eggen Svandal
author_email = aesvandal@gmail.com
description = Automatically fish on minecraft servers and realms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Amund211/autofish
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pycraft @ git+https://github.com/ammaraskar/pyCraft@master
    requests
    toml

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,.mypy_cache,__pycache__,build,dist,venv
